# os-lively

./: .gitignore  .gitreview  .testr.conf  CONTRIBUTING.rst  README.md  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
os_lively/: __init__.py  conf.py  service.proto  service.py  service_pb2.py  target.proto
os_lively/tests/: base.py  fixtures.py
os_lively/tests/functional/: base.py  curl.py  etcd3-container.bash  example.py  test_notify.py  test_service.py
os_lively/tests/unit/: base.py  test_service.py
